--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="shortcut icon" href="https://img.favpng.com/21/19/12/trinidad-black-hole-clip-art-png-favpng-NVg43cmF8vYvSk33sayWbtpV9_t.jpg" type="image/x-icon">
     <title>CV</title>
   </head>
   <body>
