--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>CV</title>
   </head>
   <body>
-    <object data="main.pdf" width="100%" height="720px">
+    <object data="cv.pdf" width="100%" height="720px">
       <p>Unable to display PDF file. <a href="/uploads/media/default/0001/01/540cb75550adf33f281f29132dddd14fded85bfc.pdf">Download</a> instead.</p>
     </object>
   </body>
